--- a/JeekobsSportCenter_ADMIN/HTML/Orders_Completed.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Orders_Completed.html
@@ -151,6 +151,15 @@
     </div>
   </div>
     
-    <script src="/JeekobsSportCenter_ADMIN/JAVASCRIPT/Logout_Orders_Completed.js"></script>
+  <script>
+    
+    document.querySelector("#show-logout").addEventListener("click",function(){
+      document.querySelector(".Form").classList.add("active");
+  });
+  document.querySelector(".Form .close-btn").addEventListener("click",function(){
+      document.querySelector(".Form").classList.remove("active");
+  });
+  
+  </script>
 </body>
 </html>
