--- a/JeekobsSportCenter_ADMIN/HTML/Orders_Pending.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Orders_Pending.html
@@ -133,6 +133,15 @@
     </div>
   </div>
     
-    <script src="/JeekobsSportCenter_ADMIN/JAVASCRIPT/Logout_Orders_Pending.js"></script>
+  <script>
+
+    document.querySelector("#show-logout").addEventListener("click",function(){
+      document.querySelector(".Form").classList.add("active");
+  });
+  document.querySelector(".Form .close-btn").addEventListener("click",function(){
+      document.querySelector(".Form").classList.remove("active");
+  });
+  
+  </script>
 </body>
 </html>
