--- a/JeekobsSportCenter_ADMIN/HTML/Users.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Users.html
@@ -150,6 +150,15 @@
     </div>
      </div>
     
-    <script src="/JeekobsSportCenter_ADMIN/JAVASCRIPT/Logout_Users.js"></script>
+     <script>
+
+      document.querySelector("#show-logout").addEventListener("click",function(){
+        document.querySelector(".Form").classList.add("active");
+    });
+    document.querySelector(".Form .close-btn").addEventListener("click",function(){
+        document.querySelector(".Form").classList.remove("active");
+    });
+    
+    </script>
 </body>
 </html>
