--- a/JeekobsSportCenter_ADMIN/HTML/Products.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Products.html
@@ -78,7 +78,7 @@
 
       <div class="tag"><p>Products</p></div>
       
-      <div class="add-products-btn"><button>Add Products</button></div>
+      <div class="add-products-btn"><button type="button" >Add Products</button></div>
 
     <div class="wrapper">
      
