Newly updated logout page

--- a/JeekobsSportCenter_ADMIN/HTML/Orders_Completed.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Orders_Completed.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orders</title>
     <link rel="stylesheet" href="/JeekobsSportCenter_ADMIN/CSS/style_Orders_Completed.css">
-    <link rel="icon" type="image/jpg" href="/JeekobsSportCenter_ADMIN/Logo/LOGO.png">
+    <link rel="icon" type="image/jpg" href="/JeekobsSportCenter_ADMIN/Logo/Logo3.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
@@ -14,7 +14,7 @@
        <div class="box">
          <div class="profile">
             <p>Admin</p>
-            <img src="/JeekobsSportCenter_ADMIN/Users/Admin.jpg" alt="">
+            <img src="/JeekobsSportCenter_ADMIN/Logo/Logo3.png" alt="">
          </div>
        </div>
 
@@ -42,7 +42,7 @@
           <a href="/JeekobsSportCenter_ADMIN/HTML/Users.html">Users</a>
           <i class='bx bxs-user-badge'></i>
        </li>
-        <!--DORPDOWN-->
+        <!--DROPDOWN-->
         <ul class="settings-dropdown">
           <li>
             <a>Settings</a>
@@ -58,18 +58,8 @@
       </div>    
          </li>
         </ul>
-         <!--DORPDOWN-->
+         <!--DROPDOWN-->
       </ul>        
-
-<!--Popout Logout-->
-<div class="Form">
-  <div class="close-btn">NO</div>
-  <form action="/JeekobsSportCenter_ADMIN/HTML/Admin-Login.html">
-    <p>LOGOUT?</p>
-    <button type="submit">YES</button>
-  </form>  
-</div>
-<!--Popout Logout-->
 
        </div>   
      </div>
@@ -150,15 +140,31 @@
       </table>
     </div>
   </div>
-    
+
+  <!--Popout Logout-->
+
+<div id="modal-bg" class="modal">  
+  <form action= "/JeekobsSportCenter_ADMIN/HTML/Admin-Login.html" class="modal-content">
+  <p>Log out?</p>
+  <button type="submit">Yes</button>
+  <span class="close-btn">No</span>
+  </form>  
+  </div>
+  <!--Popout Logout-->
+
   <script>
     
-    document.querySelector("#show-logout").addEventListener("click",function(){
-      document.querySelector(".Form").classList.add("active");
-  });
-  document.querySelector(".Form .close-btn").addEventListener("click",function(){
-      document.querySelector(".Form").classList.remove("active");
-  });
+    var modal = document.getElementById("modal-bg");
+  var btn = document.getElementById("show-logout");
+    var span = document.getElementsByClassName("close-btn")[0];
+
+  btn.onclick = function() {
+  modal.style.display = "block";
+  }
+
+  span.onclick = function() {
+  modal.style.display = "none";
+  }
   
   </script>
 </body>
