--- a/JeekobsSportCenter_ADMIN/HTML/Reviews.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Reviews.html
@@ -122,7 +122,7 @@
      <!--Popout Logout-->
 
 <div id="modal-bg" class="modal">  
-  <form action= "/JeekobsSportCenter_ADMIN/HTML/Admin-Login.html" class="modal-content">
+  <form action= "/index.html" class="modal-content">
   <p>Log out?</p>
   <button type="submit">Yes</button>
   <span class="close-btn">No</span>
