--- a/JeekobsSportCenter_ADMIN/HTML/Orders_Completed.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Orders_Completed.html
@@ -99,7 +99,7 @@
         <td>02/04/2024</td>
         <td>55$</td>
         <td>Completed</td>
-        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
+        <td class="actions"><a href=""></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
       </tr>
       <tr>
         <td>3</td>
@@ -108,7 +108,7 @@
         <td>10/03/2024</td>
         <td>31$</td>
         <td>Completed</td>
-        <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt' id="trash"></i></a></td>
+        <td class="actions"><a href=""></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
       </tr>
       <tr>
         <td>4</td>
@@ -117,7 +117,7 @@
         <td>01//04/2024</td>
         <td>56$</td>
         <td>Completed</td>
-        <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
+        <td class="actions"><a href=""></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
       </tr>
       <tr>
         <td>8</td>
@@ -126,7 +126,7 @@
         <td>04/02/2024</td>
         <td>45$</td>
         <td>Completed</td>
-        <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
+        <td class="actions"><a href=""></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
       </tr>
       <tr>
         <td>9</td>
@@ -135,7 +135,7 @@
         <td>06/02/2024</td>
         <td>11$</td>
         <td>Completed</td>
-        <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
+        <td class="actions"><a href=""></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
       </tr>
       </table>
     </div>
@@ -144,7 +144,7 @@
   <!--Popout Logout-->
 
 <div id="modal-bg" class="modal">  
-  <form action= "/JeekobsSportCenter_ADMIN/HTML/Admin-Login.html" class="modal-content">
+  <form action= "/index.html" class="modal-content">
   <p>Log out?</p>
   <button type="submit">Yes</button>
   <span class="close-btn">No</span>
