new updated file pathing

--- a/JeekobsSportCenter_ADMIN/HTML/Dashboard.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Dashboard.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="/JeekobsSportCenter_ADMIN/CSS/style_Dashboard.css">
-    <link rel="icon" type="image/jpg" href="/JeekobsSportCenter_ADMIN/Logo/Logo3.png">
+    <link rel="stylesheet" href="../CSS/style_Dashboard.css">
+    <link rel="icon" type="image/jpg" href="../Logo/Logo3.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
@@ -14,7 +14,7 @@
        <div class="box">
          <div class="profile">
             <p>Admin</p>
-            <img src="/JeekobsSportCenter_ADMIN/Logo/Logo3.png" alt="">
+            <img src="../Logo/Logo3.png" alt="">
          </div>
        </div>
 
@@ -27,19 +27,19 @@
          </li>
         </div>
         <li>
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Products.html">Products</a>
+          <a href="../HTML/Products.html">Products</a>
           <i class='bx bx-package'></i>
         </li>
         <li>
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Orders.html">Orders</a>
+          <a href="../HTML/Orders.html">Orders</a>
           <i class='bx bx-clipboard'></i>
        </li>
         <li>
-            <a href="/JeekobsSportCenter_ADMIN/HTML/Reviews.html">Reviews</a>
+            <a href="../HTML/Reviews.html">Reviews</a>
             <i class='bx bxs-message-alt-detail'></i>
          </li>
         <li>
-            <a href="/JeekobsSportCenter_ADMIN/HTML/Users.html">Users</a>
+            <a href="../HTML/Users.html">Users</a>
             <i class='bx bxs-user-badge'></i>
          </li>
 
@@ -104,7 +104,7 @@
       </tr>
         <tr>
         <td>1</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Zenujin.jpg" alt="">Zenujin</td>
+        <td><img src="../Users/Zenujin.jpg" alt="">Zenujin</td>
         <td>Beruu@gmail.com</td>
         <td>69$</td>
         <td>Pending</td>
@@ -112,7 +112,7 @@
        </tr>
         <tr>
         <td>1</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Shampoo.jpg" alt="">Shampoo Girl</td>
+        <td><img src="../Users/Shampoo.jpg" alt="">Shampoo Girl</td>
         <td>Palmolive@gmail.com</td>
         <td>9$</td>
         <td>Completed</td>
@@ -120,7 +120,7 @@
        </tr>
         <tr>
         <td>1</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/kenneth Dominguez.jpg" alt="">Kenneth Dominguez</td>
+        <td><img src="../Users/kenneth Dominguez.jpg" alt="">Kenneth Dominguez</td>
         <td>Dominguez@gmail.com</td>
         <td>40$</td>
         <td>Dispatched</td>
@@ -128,7 +128,7 @@
        </tr>
         <tr>
         <td>1</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Herwayne Cawili.jpg" alt="">Herwayne Cawili</td>
+        <td><img src="../Users/Herwayne Cawili.jpg" alt="">Herwayne Cawili</td>
         <td>Keerst@gmail.com</td>
         <td>20$</td>
         <td>Pending</td>
@@ -136,7 +136,7 @@
        </tr>
         <tr>
         <td>1</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Little Girl.jpg" alt="">Cry Girl</td>
+        <td><img src="../Users/Little Girl.jpg" alt="">Cry Girl</td>
         <td>Iyak@gmail.com</td>
         <td>27$</td>
         <td>Completed</td>
@@ -150,7 +150,7 @@
 <!--Popout Logout-->
 
 <div id="modal-bg" class="modal">  
-<form action= "/index.html" class="modal-content">
+<form action= "../../index.html" class="modal-content">
 <p>Log out?</p>
 <button type="submit">Yes</button>
 <span class="close-btn">No</span>
