--- a/JeekobsSportCenter_ADMIN/HTML/Orders.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Orders.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orders</title>
-    <link rel="stylesheet" href="/JeekobsSportCenter_ADMIN/CSS/style_Orders.css">
-    <link rel="icon" type="image/jpg" href="/JeekobsSportCenter_ADMIN/Logo/Logo3.png">
+    <link rel="stylesheet" href="../CSS/style_Orders.css">
+    <link rel="icon" type="image/jpg" href="../Logo/Logo3.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
@@ -14,18 +14,18 @@
        <div class="box">
          <div class="profile">
             <p>Admin</p>
-            <img src="/JeekobsSportCenter_ADMIN/Logo/Logo3.png" alt="">
+            <img src="../Logo/Logo3.png" alt="">
          </div>
        </div>
 
      <div class="navbar">
       <ul>
         <li>
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Dashboard.html">Dashboard</a>
+          <a href="../HTML/Dashboard.html">Dashboard</a>
           <i class='bx bxs-dashboard'></i>
        </li>
       <li>
-        <a href="/JeekobsSportCenter_ADMIN/HTML/Products.html">Products</a>
+        <a href="../HTML/Products.html">Products</a>
         <i class='bx bx-package'></i>
       </li>
       <div class="Orders">
@@ -35,11 +35,11 @@
      </li>
     </div>
       <li>
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Reviews.html">Reviews</a>
+          <a href="../HTML/Reviews.html">Reviews</a>
           <i class='bx bxs-message-alt-detail'></i>
        </li>
       <li>
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Users.html">Users</a>
+          <a href="../HTML/Users.html">Users</a>
           <i class='bx bxs-user-badge'></i>
        </li>
         <!--DROPDOWN-->
@@ -73,9 +73,9 @@
           <a>All orders</a>
           </div>
 
-               <a href="/JeekobsSportCenter_ADMIN/HTML/Orders_Discpatched.html">Dispatched</a>
-            <a href="/JeekobsSportCenter_ADMIN/HTML/Orders_Pending.html">Pending</a>
-        <a href="/JeekobsSportCenter_ADMIN/HTML/Orders_Completed.html">Completed</a>
+               <a href="Orders_Discpatched.html">Dispatched</a>
+            <a href="Orders_Pending.html">Pending</a>
+        <a href="Orders_Completed.html">Completed</a>
       </div>
 
      <div class="table-scroll">
@@ -93,7 +93,7 @@
       </tr>
       <tr>
         <td>1</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Al-steven Tumingbang.jpg" alt="">Al-steven Tumingbang</td>
+        <td><img src="../Users/Al-steven Tumingbang.jpg" alt="">Al-steven Tumingbang</td>
         <td>Zamboanga City</td>
         <td>02/04/2024</td>
         <td>55$</td>
@@ -102,7 +102,7 @@
       </tr>
       <tr>
         <td>2</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Allen Tan.jpg" alt="">Allen Tan</td>
+        <td><img src="../Users/Allen Tan.jpg" alt="">Allen Tan</td>
         <td>Zamboanga City</td>
         <td>11/02/2024</td>
         <td>60$</td>
@@ -111,7 +111,7 @@
       </tr>
       <tr>
         <td>3</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Anthony Marc Huesca.jpg" alt="">Anthony Marc Huesca</td>
+        <td><img src="../Users/Anthony Marc Huesca.jpg" alt="">Anthony Marc Huesca</td>
         <td>Zamboanga City</td>
         <td>10/03/2024</td>
         <td>31$</td>
@@ -120,7 +120,7 @@
       </tr>
       <tr>
         <td>4</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Art Cadiz.jpg" alt="">Art Michael Cadiz</td>
+        <td><img src="../Users/Art Cadiz.jpg" alt="">Art Michael Cadiz</td>
         <td>Zamboanga City</td>
         <td>01//04/2024</td>
         <td>56$</td>
@@ -129,7 +129,7 @@
       </tr>
       <tr>
         <td>5</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Azief Saclolo.jpg" alt="">Azief Saclolo</td>
+        <td><img src="../Users/Azief Saclolo.jpg" alt="">Azief Saclolo</td>
         <td>Zamboanga City</td>
         <td>11/04/2024</td>
         <td>100$</td>
@@ -138,7 +138,7 @@
       </tr>
       <tr>
         <td>6</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Boy Ribcage.jpg" alt="">Boy Ribcage</td>
+        <td><img src="../Users/Boy Ribcage.jpg" alt="">Boy Ribcage</td>
         <td>Zamboanga City</td>
         <td>09/12/2023</td>
         <td>35$</td>
@@ -147,7 +147,7 @@
       </tr>
       <tr>
         <td>7</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Caloocan Boy.jpg" alt="">Caloocan Boy</td>
+        <td><img src="../Users/Caloocan Boy.jpg" alt="">Caloocan Boy</td>
         <td>Zamboanga City</td>
         <td>02/03/2024</td>
         <td>68$</td>
@@ -156,7 +156,7 @@
       </tr>
       <tr>
         <td>8</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Dean Reigh Billedo.jpg" alt="">Dean Reigh Billedo</td>
+        <td><img src="../Users/Dean Reigh Billedo.jpg" alt="">Dean Reigh Billedo</td>
         <td>Zamboanga City</td>
         <td>04/02/2024</td>
         <td>45$</td>
@@ -165,7 +165,7 @@
       </tr>
       <tr>
         <td>9</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/John Rizzler.jpg" alt="">John Harold Remigio</td>
+        <td><img src="../Users/John Rizzler.jpg" alt="">John Harold Remigio</td>
         <td>Zamboanga City</td>
         <td>06/02/2024</td>
         <td>11$</td>
@@ -174,7 +174,7 @@
       </tr>
       <tr>
         <td>10</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Gio Guevarra.jpg" alt="">Gioiel Guevarra</td>
+        <td><img src="../Users/Gio Guevarra.jpg" alt="">Gioiel Guevarra</td>
         <td>Zamboanga City</td>
         <td>05/01/2024</td>
         <td>25$</td>
@@ -183,7 +183,7 @@
        </tr>
        <tr>
         <td>11</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Mudrikal Sharief.jpg" alt="">Mudrikal Shrarief</td>
+        <td><img src="../Users/Mudrikal Sharief.jpg" alt="">Mudrikal Shrarief</td>
         <td>Zamboanga City</td>
         <td>01/03/2024</td>
         <td>10$</td>
@@ -197,7 +197,7 @@
   <!--Popout Logout-->
 
 <div id="modal-bg" class="modal">  
-  <form action= "/index.html" class="modal-content">
+  <form action= "../../index.html" class="modal-content">
   <p>Log out?</p>
   <button type="submit">Yes</button>
   <span class="close-btn">No</span>
