--- a/JeekobsSportCenter_ADMIN/HTML/Orders_Completed.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Orders_Completed.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orders</title>
-    <link rel="stylesheet" href="/JeekobsSportCenter_ADMIN/CSS/style_Orders_Completed.css">
-    <link rel="icon" type="image/jpg" href="/JeekobsSportCenter_ADMIN/Logo/Logo3.png">
+    <link rel="stylesheet" href="../CSS/style_Orders_Completed.css">
+    <link rel="icon" type="image/jpg" href="../Logo/Logo3.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
@@ -14,18 +14,18 @@
        <div class="box">
          <div class="profile">
             <p>Admin</p>
-            <img src="/JeekobsSportCenter_ADMIN/Logo/Logo3.png" alt="">
+            <img src="../Logo/Logo3.png" alt="">
          </div>
        </div>
 
      <div class="navbar">
       <ul>
         <li>
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Dashboard.html">Dashboard</a>
+          <a href="../HTML/Dashboard.html">Dashboard</a>
           <i class='bx bxs-dashboard'></i>
        </li>
       <li>
-        <a href="/JeekobsSportCenter_ADMIN/HTML/Products.html">Products</a>
+        <a href="../HTML/Products.html">Products</a>
         <i class='bx bx-package'></i>
       </li>
       <div class="Orders">
@@ -35,11 +35,11 @@
      </li>
     </div>
       <li>
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Reviews.html">Reviews</a>
+          <a href="../HTML/Reviews.html">Reviews</a>
           <i class='bx bxs-message-alt-detail'></i>
        </li>
       <li>
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Users.html">Users</a>
+          <a href="../HTML/Users.html">Users</a>
           <i class='bx bxs-user-badge'></i>
        </li>
         <!--DROPDOWN-->
@@ -70,9 +70,9 @@
 
       <div class="nav_bar">
         
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Orders.html">All orders</a>
-           <a href="/JeekobsSportCenter_ADMIN/HTML/Orders_Discpatched.html">Dispatched</a>
-            <a href="/JeekobsSportCenter_ADMIN/HTML/Orders_Pending.html">Pending</a>
+          <a href="../HTML/Orders.html">All orders</a>
+           <a href="../HTML/Orders_Discpatched.html">Dispatched</a>
+            <a href="../HTML/Orders_Pending.html">Pending</a>
 
               <div class="selected">
             <a>Completed</a>
@@ -94,7 +94,7 @@
       </tr>
       <tr>
         <td>1</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Al-steven Tumingbang.jpg" alt="">Al-steven Tumingbang</td>
+        <td><img src="../Users/Al-steven Tumingbang.jpg" alt="">Al-steven Tumingbang</td>
         <td>Zamboanga City</td>
         <td>02/04/2024</td>
         <td>55$</td>
@@ -103,7 +103,7 @@
       </tr>
       <tr>
         <td>3</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Anthony Marc Huesca.jpg" alt="">Anthony Marc Huesca</td>
+        <td><img src="../Users/Anthony Marc Huesca.jpg" alt="">Anthony Marc Huesca</td>
         <td>Zamboanga City</td>
         <td>10/03/2024</td>
         <td>31$</td>
@@ -112,7 +112,7 @@
       </tr>
       <tr>
         <td>4</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Art Cadiz.jpg" alt="">Art Michael Cadiz</td>
+        <td><img src="../Users/Art Cadiz.jpg" alt="">Art Michael Cadiz</td>
         <td>Zamboanga City</td>
         <td>01//04/2024</td>
         <td>56$</td>
@@ -121,7 +121,7 @@
       </tr>
       <tr>
         <td>8</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Dean Reigh Billedo.jpg" alt="">Dean Reigh Billedo</td>
+        <td><img src="../Users/Dean Reigh Billedo.jpg" alt="">Dean Reigh Billedo</td>
         <td>Zamboanga City</td>
         <td>04/02/2024</td>
         <td>45$</td>
@@ -130,7 +130,7 @@
       </tr>
       <tr>
         <td>9</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/John Rizzler.jpg" alt="">John Harold Remigio</td>
+        <td><img src="../Users/John Rizzler.jpg" alt="">John Harold Remigio</td>
         <td>Zamboanga City</td>
         <td>06/02/2024</td>
         <td>11$</td>
@@ -144,7 +144,7 @@
   <!--Popout Logout-->
 
 <div id="modal-bg" class="modal">  
-  <form action= "/index.html" class="modal-content">
+  <form action= "../../index.html" class="modal-content">
   <p>Log out?</p>
   <button type="submit">Yes</button>
   <span class="close-btn">No</span>
