--- a/JeekobsSportCenter_ADMIN/HTML/Orders_Discpatched.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Orders_Discpatched.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orders</title>
-    <link rel="stylesheet" href="/JeekobsSportCenter_ADMIN/CSS/style_Orders_Dispatched.css">
-    <link rel="icon" type="image/jpg" href="/JeekobsSportCenter_ADMIN/Logo/Logo3.png">
+    <link rel="stylesheet" href="../CSS/style_Orders_Dispatched.css">
+    <link rel="icon" type="image/jpg" href="../Logo/Logo3.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
@@ -14,18 +14,18 @@
        <div class="box">
          <div class="profile">
             <p>Admin</p>
-            <img src="/JeekobsSportCenter_ADMIN/Logo/Logo3.png" alt="">
+            <img src="../Logo/Logo3.png" alt="">
          </div>
        </div>
 
      <div class="navbar">
       <ul>
         <li>
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Dashboard.html">Dashboard</a>
+          <a href="../HTML/Dashboard.html">Dashboard</a>
           <i class='bx bxs-dashboard'></i>
        </li>
       <li>
-        <a href="/JeekobsSportCenter_ADMIN/HTML/Products.html">Products</a>
+        <a href="../HTML/Products.html">Products</a>
         <i class='bx bx-package'></i>
       </li>
       <div class="Orders">
@@ -35,11 +35,11 @@
      </li>
     </div>
       <li>
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Reviews.html">Reviews</a>
+          <a href="../HTML/Reviews.html">Reviews</a>
           <i class='bx bxs-message-alt-detail'></i>
        </li>
       <li>
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Users.html">Users</a>
+          <a href="../HTML/Users.html">Users</a>
           <i class='bx bxs-user-badge'></i>
        </li>
        <!--DROPDOWN-->
@@ -69,13 +69,13 @@
     <div class="tag"><p>Orders > Dispatched</p></div>
 
       <div class="nav_bar">       
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Orders.html">All orders</a>
+          <a href="../HTML/Orders.html">All orders</a>
 
           <div class="selected">
                <a>Dispatched</a>
             </div>
-            <a href="/JeekobsSportCenter_ADMIN/HTML/Orders_Pending.html">Pending</a>
-        <a href="/JeekobsSportCenter_ADMIN/HTML/Orders_Completed.html">Completed</a>
+            <a href="../HTML/Orders_Pending.html">Pending</a>
+        <a href="../HTML/Orders_Completed.html">Completed</a>
       </div>
 
      <div class="table-scroll">
@@ -93,7 +93,7 @@
       </tr>
       <tr>
         <td>2</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Allen Tan.jpg" alt="">Allen Tan</td>
+        <td><img src="../Users/Allen Tan.jpg" alt="">Allen Tan</td>
         <td>Zamboanga City</td>
         <td>11/02/2024</td>
         <td>60$</td>
@@ -102,7 +102,7 @@
       </tr>
       <tr>
         <td>7</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Caloocan Boy.jpg" alt="">Caloocan Boy</td>
+        <td><img src="../Users/Caloocan Boy.jpg" alt="">Caloocan Boy</td>
         <td>Zamboanga City</td>
         <td>02/03/2024</td>
         <td>68$</td>
@@ -111,7 +111,7 @@
       </tr>
       <tr>
         <td>10</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Gio Guevarra.jpg" alt="">Gioiel Guevarra</td>
+        <td><img src="../Users/Gio Guevarra.jpg" alt="">Gioiel Guevarra</td>
         <td>Zamboanga City</td>
         <td>05/01/2024</td>
         <td>25$</td>
@@ -125,7 +125,7 @@
   <!--Popout Logout-->
 
 <div id="modal-bg" class="modal">  
-  <form action= "/index.html" class="modal-content">
+  <form action= "../../index.html" class="modal-content">
   <p>Log out?</p>
   <button type="submit">Yes</button>
   <span class="close-btn">No</span>
