--- a/JeekobsSportCenter_ADMIN/HTML/Orders_Pending.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Orders_Pending.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orders</title>
-    <link rel="stylesheet" href="/JeekobsSportCenter_ADMIN/CSS/style_Orders_Pending.css">
-    <link rel="icon" type="image/jpg" href="/JeekobsSportCenter_ADMIN/Logo/Logo3.png">
+    <link rel="stylesheet" href="../CSS/style_Orders_Pending.css">
+    <link rel="icon" type="image/jpg" href="../Logo/Logo3.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
@@ -14,18 +14,18 @@
        <div class="box">
          <div class="profile">
             <p>Admin</p>
-            <img src="/JeekobsSportCenter_ADMIN/Logo/Logo3.png" alt="">
+            <img src="../Logo/Logo3.png" alt="">
          </div>
        </div>
 
      <div class="navbar">
       <ul>
         <li>
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Dashboard.html">Dashboard</a>
+          <a href="../HTML/Dashboard.html">Dashboard</a>
           <i class='bx bxs-dashboard'></i>
        </li>
       <li>
-        <a href="/JeekobsSportCenter_ADMIN/HTML/Products.html">Products</a>
+        <a href="../HTML/Products.html">Products</a>
         <i class='bx bx-package'></i>
       </li>
       <div class="Orders">
@@ -35,11 +35,11 @@
      </li>
     </div>
       <li>
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Reviews.html">Reviews</a>
+          <a href="../HTML/Reviews.html">Reviews</a>
           <i class='bx bxs-message-alt-detail'></i>
        </li>
       <li>
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Users.html">Users</a>
+          <a href="../HTML/Users.html">Users</a>
           <i class='bx bxs-user-badge'></i>
        </li>
        <!--DROPDOWN-->
@@ -69,14 +69,14 @@
       <div class="tag"><p>Orders > Pending</p></div>
       
       <div class="nav_bar">
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Orders.html">All orders</a>
-            <a href="/JeekobsSportCenter_ADMIN/HTML/Orders_Discpatched.html">Dispatched</a>
+          <a href="../HTML/Orders.html">All orders</a>
+            <a href="../HTML/Orders_Discpatched.html">Dispatched</a>
 
             <div class="selected"> 
             <a>Pending</a>
           </div>
 
-        <a href="/JeekobsSportCenter_ADMIN/HTML/Orders_Completed.html">Completed</a>
+        <a href="../HTML/Orders_Completed.html">Completed</a>
       </div>
 
      <div class="table-scroll">
@@ -94,7 +94,7 @@
       </tr>
       <tr>
           <td>5</td>
-          <td><img src="/JeekobsSportCenter_ADMIN/Users/Azief Saclolo.jpg" alt="">Azief Saclolo</td>
+          <td><img src="../Users/Azief Saclolo.jpg" alt="">Azief Saclolo</td>
           <td>Zamboanga City</td>
           <td>11/04/2024</td>
           <td>100$</td>
@@ -103,7 +103,7 @@
       </tr>
       <tr>
         <td>11</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Mudrikal Sharief.jpg" alt="">Mudrikal Shrarief</td>
+        <td><img src="../Users/Mudrikal Sharief.jpg" alt="">Mudrikal Shrarief</td>
         <td>Zamboanga City</td>
         <td>01/03/2024</td>
         <td>10$</td>
@@ -112,7 +112,7 @@
       </tr>
       <tr>
         <td>6</td>
-        <td><img src="/JeekobsSportCenter_ADMIN/Users/Boy Ribcage.jpg" alt="">Boy Ribcage</td>
+        <td><img src="../Users/Boy Ribcage.jpg" alt="">Boy Ribcage</td>
         <td>Zamboanga City</td>
         <td>09/12/2023</td>
         <td>35$</td>
@@ -126,7 +126,7 @@
   <!--Popout Logout-->
 
 <div id="modal-bg" class="modal">  
-  <form action= "/index.html" class="modal-content">
+  <form action= "../../index.html" class="modal-content">
   <p>Log out?</p>
   <button type="submit">Yes</button>
   <span class="close-btn">No</span>
