--- a/JeekobsSportCenter_ADMIN/HTML/Users.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Users.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Applicants</title>
-    <link rel="stylesheet" href="/JeekobsSportCenter_ADMIN/CSS/Style_Users.css">
-    <link rel="icon" type="image/jpg" href="/JeekobsSportCenter_ADMIN/Logo/Logo3.png">
+    <link rel="stylesheet" href="../CSS/Style_Users.css">
+    <link rel="icon" type="image/jpg" href="../Logo/Logo3.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
@@ -14,26 +14,26 @@
        <div class="box">
          <div class="profile">
             <p>Admin</p>
-            <img src="/JeekobsSportCenter_ADMIN/Logo/Logo3.png" alt="">
+            <img src="../Logo/Logo3.png" alt="">
          </div>
        </div>
 
      <div class="navbar">
         <ul>
           <li>
-            <a href="/JeekobsSportCenter_ADMIN/HTML/Dashboard.html">Dashboard</a>
+            <a href="../HTML/Dashboard.html">Dashboard</a>
             <i class='bx bxs-dashboard'></i>
          </li>
         <li>
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Products.html">Products</a>
+          <a href="../HTML/Products.html">Products</a>
           <i class='bx bx-package'></i>
         </li>
         <li>
-          <a href="/JeekobsSportCenter_ADMIN/HTML/Orders.html">Orders</a>
+          <a href="../HTML/Orders.html">Orders</a>
           <i class='bx bx-clipboard'></i>
        </li>
         <li>
-            <a href="/JeekobsSportCenter_ADMIN/HTML/Reviews.html">Reviews</a>
+            <a href="../HTML/Reviews.html">Reviews</a>
             <i class='bx bxs-message-alt-detail'></i>
          </li>
        <div class="Users">
@@ -83,7 +83,7 @@
         </tr>
           <tr>
           <td>1</td>
-          <td><img src="/JeekobsSportCenter_ADMIN/Users/Dave Basa.png" alt="">Dave Basa</td>
+          <td><img src="../Users/Dave Basa.png" alt="">Dave Basa</td>
           <td>Basa@gmail.com</td>
           <td>09914567890</td>
           <td>Male</td>
@@ -92,7 +92,7 @@
          </tr>
           <tr>
             <td>2</td>
-            <td><img src="/JeekobsSportCenter_ADMIN/Users/John Xyrus.jpg" alt="">John Xyrus</td>
+            <td><img src="../Users/John Xyrus.jpg" alt="">John Xyrus</td>
             <td>Fuentes123@gmail.com</td>
             <td>09694201234</td>
             <td>Male</td>
@@ -101,7 +101,7 @@
          </tr>
           <tr>
             <td>3</td>
-            <td><img src="/JeekobsSportCenter_ADMIN/Users/Cyde Marquez.jpg" alt="">Cyde Marquez</td>
+            <td><img src="../Users/Cyde Marquez.jpg" alt="">Cyde Marquez</td>
             <td>Cid69@gmail.com</td>
             <td>0422567890</td>
             <td>Male</td>
@@ -110,7 +110,7 @@
          </tr>
           <tr>
             <td>4</td>
-            <td><img src="/JeekobsSportCenter_ADMIN/Users/JohnHarold.png" alt="">John harold</td>
+            <td><img src="../Users/JohnHarold.png" alt="">John harold</td>
             <td>Remigio@gmail.com</td>
             <td>09068734561</td>
             <td>Male</td>
@@ -119,7 +119,7 @@
          </tr>
           <tr>
             <td>5</td>
-            <td><img src="/JeekobsSportCenter_ADMIN/Users/Baby Sideeye.jpg" alt="">Baby Side-eye</td>
+            <td><img src="../Users/Baby Sideeye.jpg" alt="">Baby Side-eye</td>
             <td>gogogaga@gmail.com</td>
             <td>01234567890</td>
             <td>Male</td>
@@ -128,7 +128,7 @@
          </tr>
           <tr>
             <td>6</td>
-            <td><img src="/JeekobsSportCenter_ADMIN/Users/Hitler Hutcherson.jpg" alt="">Hitler Hutcherson</td>
+            <td><img src="../Users/Hitler Hutcherson.jpg" alt="">Hitler Hutcherson</td>
             <td>GermanNazi@gmail.com</td>
             <td>09929112468</td>
             <td>Male</td>
@@ -143,7 +143,7 @@
      <!--Popout Logout-->
 
 <div id="modal-bg" class="modal">  
-  <form action= "/index.html" class="modal-content">
+  <form action= "../../index.html" class="modal-content">
   <p>Log out?</p>
   <button type="submit">Yes</button>
   <span class="close-btn">No</span>
