--- a/JeekobsSportCenter_ADMIN/HTML/Users.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Users.html
@@ -88,7 +88,7 @@
           <td>09914567890</td>
           <td>Male</td>
           <td>Inactive</td>
-          <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
+          <td class="actions"><a href=""><i class='bx bx-edit-alt'></i></i></a></td>
          </tr>
           <tr>
             <td>2</td>
@@ -97,7 +97,7 @@
             <td>09694201234</td>
             <td>Male</td>
             <td>Inactive</td>
-            <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
+            <td class="actions"><a href=""><i class='bx bx-edit-alt'></i></i></a></td>
          </tr>
           <tr>
             <td>3</td>
@@ -106,7 +106,7 @@
             <td>0422567890</td>
             <td>Male</td>
             <td>Active</td>
-            <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
+            <td class="actions"><a href=""><i class='bx bx-edit-alt'></i></i></a></td>
          </tr>
           <tr>
             <td>4</td>
@@ -115,7 +115,7 @@
             <td>09068734561</td>
             <td>Male</td>
             <td>Active</td>
-            <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
+            <td class="actions"><a href=""><i class='bx bx-edit-alt'></i></i></a></td>
          </tr>
           <tr>
             <td>5</td>
@@ -124,7 +124,7 @@
             <td>01234567890</td>
             <td>Male</td>
             <td>Inactive</td>
-            <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
+            <td class="actions"><a href=""><i class='bx bx-edit-alt'></i></i></a></td>
          </tr>
           <tr>
             <td>6</td>
@@ -133,7 +133,7 @@
             <td>09929112468</td>
             <td>Male</td>
             <td>Inactive</td>
-            <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
+            <td class="actions"><a href=""><i class='bx bx-edit-alt'></i></i></a></td>
          </tr>
         </table>
       </div>
