--- a/JeekobsSportCenter_ADMIN/HTML/Orders_Completed.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Orders_Completed.html
@@ -99,7 +99,7 @@
         <td>02/04/2024</td>
         <td>55$</td>
         <td>Completed</td>
-        <td class="actions"><a href=""></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
+        <td class="actions"><button id="remove"></i><i class='bx bx-trash-alt'></i></button></td>
       </tr>
       <tr>
         <td>3</td>
@@ -108,7 +108,7 @@
         <td>10/03/2024</td>
         <td>31$</td>
         <td>Completed</td>
-        <td class="actions"><a href=""></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
+        <td class="actions"><button id="remove"></i><i class='bx bx-trash-alt'></i></button></td>
       </tr>
       <tr>
         <td>4</td>
@@ -117,7 +117,7 @@
         <td>01//04/2024</td>
         <td>56$</td>
         <td>Completed</td>
-        <td class="actions"><a href=""></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
+        <td class="actions"><button id="remove"></i><i class='bx bx-trash-alt'></i></button></td>
       </tr>
       <tr>
         <td>8</td>
@@ -126,7 +126,7 @@
         <td>04/02/2024</td>
         <td>45$</td>
         <td>Completed</td>
-        <td class="actions"><a href=""></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
+        <td class="actions"><button id="remove"></i><i class='bx bx-trash-alt'></i></button></td>
       </tr>
       <tr>
         <td>9</td>
@@ -135,10 +135,23 @@
         <td>06/02/2024</td>
         <td>11$</td>
         <td>Completed</td>
-        <td class="actions"><a href=""></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
+        <td class="actions"><button id="remove"></i><i class='bx bx-trash-alt'></i></button></td>
       </tr>
       </table>
     </div>
+  </div>
+
+  <!-- Delete User -->
+
+  <div id="modaldel" class="modaldel">
+
+    <form action="" class="modaldel-content">
+      <h1>Remove User</h1> <br>
+      <p>Are you sure you want to remove user?</p> <br><br>
+      <button type="submit" id="cancel" onclick="closebtn()">Cancel</button>
+      <button type="submit" id="submit" onclick="submitbtn()">Remove</button>
+    </form>
+
   </div>
 
   <!--Popout Logout-->
@@ -152,11 +165,27 @@
   </div>
   <!--Popout Logout-->
 
+
   <script>
-    
+
+    // delete user //
+    var modaldlt = document.getElementById("modaldel");
+      var btndlt = document.getElementById("remove");
+        var spandlt = document.getElementsByClassName("cancel")[0];
+
+  btndlt.onclick = function() {
+  modaldlt.style.display = "block";
+  }
+
+  spandlt.onclick = function() {
+  modaldlt.style.display = "none";
+  }
+
+
+    // log out //
     var modal = document.getElementById("modal-bg");
-  var btn = document.getElementById("show-logout");
-    var span = document.getElementsByClassName("close-btn")[0];
+      var btn = document.getElementById("show-logout");
+        var span = document.getElementsByClassName("close-btn")[0];
 
   btn.onclick = function() {
   modal.style.display = "block";
@@ -165,7 +194,6 @@
   span.onclick = function() {
   modal.style.display = "none";
   }
-  
   </script>
 </body>
 </html>
