--- a/JeekobsSportCenter_ADMIN/HTML/Orders_Pending.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Orders_Pending.html
@@ -70,7 +70,7 @@
       
       <div class="nav_bar">
           <a href="../HTML/Orders.html">All orders</a>
-            <a href="../HTML/Orders_Discpatched.html">Dispatched</a>
+            <a href="../HTML/Orders_Shipped.html">Shipped</a>
 
             <div class="selected"> 
             <a>Pending</a>
@@ -83,20 +83,24 @@
       <table id="T1" class="table">
       <tr>
         <thead>
-        <th>Id</th>
-        <th>Name</th>
-        <th>Address</th>
-        <th>Date</th>
-        <th>Price</th>
-        <th>Status</th>
-        <th>Action</th>
+          <th>Id</th>
+          <th>Name</th>
+          <th>OrderName</th>
+          <th>Address</th>
+          <th>Date</th>
+          <th>Quantity</th>
+          <th>Price</th>
+          <th>Status</th>
+          <th>Action</th>
       </thead>
       </tr>
       <tr>
           <td>5</td>
           <td><img src="../Users/Azief Saclolo.jpg" alt="">Azief Saclolo</td>
+          <td>SBall</td>
           <td>Zamboanga City</td>
           <td>11/04/2024</td>
+          <td>2</td>
           <td>100$</td>
           <td>Pending</td>
           <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></div></a></td>
@@ -104,8 +108,10 @@
       <tr>
         <td>11</td>
         <td><img src="../Users/Mudrikal Sharief.jpg" alt="">Mudrikal Shrarief</td>
+        <td>SBall</td>
         <td>Zamboanga City</td>
         <td>01/03/2024</td>
+        <td>2</td>
         <td>10$</td>
         <td>Pending</td>
         <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
@@ -113,8 +119,10 @@
       <tr>
         <td>6</td>
         <td><img src="../Users/Boy Ribcage.jpg" alt="">Boy Ribcage</td>
+        <td>SBall</td>
         <td>Zamboanga City</td>
         <td>09/12/2023</td>
+        <td>2</td>
         <td>35$</td>
         <td>Pending</td>
         <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
