--- a/JeekobsSportCenter_ADMIN/HTML/Reviews.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Reviews.html
@@ -74,7 +74,7 @@
           <thead>
           <th>Review Name</th>
           <th>username</th>
-          <th>Date</th>
+          <th>Address</th>
           <th>Status</th>
           <th>Actions</th>
         </thead>
