--- a/JeekobsSportCenter_ADMIN/HTML/Orders.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Orders.html
@@ -73,7 +73,7 @@
           <a>All orders</a>
           </div>
 
-               <a href="Orders_Discpatched.html">Dispatched</a>
+               <a href="Orders_Shipped.html">Shipped</a>
             <a href="Orders_Pending.html">Pending</a>
         <a href="Orders_Completed.html">Completed</a>
       </div>
@@ -84,8 +84,10 @@
         <thead>
         <th>Id</th>
         <th>Name</th>
+        <th>OrderName</th>
         <th>Address</th>
         <th>Date</th>
+        <th>Quantity</th>
         <th>Price</th>
         <th>Status</th>
         <th>Action</th>
@@ -94,8 +96,10 @@
       <tr>
         <td>1</td>
         <td><img src="../Users/Al-steven Tumingbang.jpg" alt="">Al-steven Tumingbang</td>
+        <td>SBall</td>
         <td>Zamboanga City</td>
         <td>02/04/2024</td>
+        <td>2</td>
         <td>55$</td>
         <td>Completed</td>
         <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt'  id="trash"></i></a></td>
@@ -103,17 +107,21 @@
       <tr>
         <td>2</td>
         <td><img src="../Users/Allen Tan.jpg" alt="">Allen Tan</td>
+        <td>SBall</td>
         <td>Zamboanga City</td>
         <td>11/02/2024</td>
+        <td>2</td>
         <td>60$</td>
-        <td>Dispatched</td>
+        <td>Shipped</td>
         <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt' id="trash"></i></a></td>
       </tr>
       <tr>
         <td>3</td>
         <td><img src="../Users/Anthony Marc Huesca.jpg" alt="">Anthony Marc Huesca</td>
+        <td>SBall</td>
         <td>Zamboanga City</td>
         <td>10/03/2024</td>
+        <td>3</td>
         <td>31$</td>
         <td>Completed</td>
         <td class="actions"><a href=""><i class='bx bx-edit-alt'></i><i class='bx bx-trash-alt' id="trash"></i></a></td>
@@ -121,8 +129,10 @@
       <tr>
         <td>4</td>
         <td><img src="../Users/Art Cadiz.jpg" alt="">Art Michael Cadiz</td>
+        <td>SBall</td>
         <td>Zamboanga City</td>
         <td>01//04/2024</td>
+        <td>1</td>
         <td>56$</td>
         <td>Completed</td>
         <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
@@ -130,8 +140,10 @@
       <tr>
         <td>5</td>
         <td><img src="../Users/Azief Saclolo.jpg" alt="">Azief Saclolo</td>
+        <td>SBall</td>
         <td>Zamboanga City</td>
         <td>11/04/2024</td>
+        <td>9</td>
         <td>100$</td>
         <td>Pending</td>
         <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></div></a></td>
@@ -139,8 +151,10 @@
       <tr>
         <td>6</td>
         <td><img src="../Users/Boy Ribcage.jpg" alt="">Boy Ribcage</td>
+        <td>SBall</td>
         <td>Zamboanga City</td>
         <td>09/12/2023</td>
+        <td>2</td>
         <td>35$</td>
         <td>Pending</td>
         <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
@@ -148,17 +162,21 @@
       <tr>
         <td>7</td>
         <td><img src="../Users/Caloocan Boy.jpg" alt="">Caloocan Boy</td>
+        <td>SBall</td>
         <td>Zamboanga City</td>
         <td>02/03/2024</td>
+        <td>6</td>
         <td>68$</td>
-        <td>Dispatched</td>
+        <td>Shipped</td>
         <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
       </tr>
       <tr>
         <td>8</td>
         <td><img src="../Users/Dean Reigh Billedo.jpg" alt="">Dean Reigh Billedo</td>
+        <td>SBall</td>
         <td>Zamboanga City</td>
         <td>04/02/2024</td>
+        <td>5</td>
         <td>45$</td>
         <td>Completed</td>
         <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
@@ -166,8 +184,10 @@
       <tr>
         <td>9</td>
         <td><img src="../Users/John Rizzler.jpg" alt="">John Harold Remigio</td>
+        <td>SBall</td>
         <td>Zamboanga City</td>
         <td>06/02/2024</td>
+        <td>2</td>
         <td>11$</td>
         <td>Completed</td>
         <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
@@ -175,17 +195,21 @@
       <tr>
         <td>10</td>
         <td><img src="../Users/Gio Guevarra.jpg" alt="">Gioiel Guevarra</td>
+        <td>SBall</td>
         <td>Zamboanga City</td>
         <td>05/01/2024</td>
+        <td>1</td>
         <td>25$</td>
-        <td>Dispatched</td>
+        <td>Shipped</td>
         <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
        </tr>
        <tr>
         <td>11</td>
         <td><img src="../Users/Mudrikal Sharief.jpg" alt="">Mudrikal Shrarief</td>
+        <td>SBall</td>
         <td>Zamboanga City</td>
         <td>01/03/2024</td>
+        <td>3</td>
         <td>10$</td>
         <td>Pending</td>
         <td class="actions"><a href=""><i class='bx bx-edit-alt'><i class='bx bx-trash-alt' id="trash"></i></a></td>
