--- a/JeekobsSportCenter_ADMIN/HTML/Orders_Completed.html
+++ b/JeekobsSportCenter_ADMIN/HTML/Orders_Completed.html
@@ -71,7 +71,7 @@
       <div class="nav_bar">
         
           <a href="../HTML/Orders.html">All orders</a>
-           <a href="../HTML/Orders_Discpatched.html">Dispatched</a>
+           <a href="../HTML/Orders_Shipped.html">Shipped</a>
             <a href="../HTML/Orders_Pending.html">Pending</a>
 
               <div class="selected">
@@ -83,20 +83,24 @@
       <table id="T1" class="table">
       <tr>
         <thead>
-        <th>Id</th>
-        <th>Name</th>
-        <th>Address</th>
-        <th>Date</th>
-        <th>Price</th>
-        <th>Status</th>
-        <th>Action</th>
+          <th>Id</th>
+          <th>Name</th>
+          <th>OrderName</th>
+          <th>Address</th>
+          <th>Date</th>
+          <th>Quantity</th>
+          <th>Price</th>
+          <th>Status</th>
+          <th>Action</th>
       </thead>
       </tr>
       <tr>
         <td>1</td>
         <td><img src="../Users/Al-steven Tumingbang.jpg" alt="">Al-steven Tumingbang</td>
+        <td>SBall</td>
         <td>Zamboanga City</td>
         <td>02/04/2024</td>
+        <td>4</td>
         <td>55$</td>
         <td>Completed</td>
         <td class="actions"><button id="remove"></i><i class='bx bx-trash-alt'></i></button></td>
@@ -104,38 +108,46 @@
       <tr>
         <td>3</td>
         <td><img src="../Users/Anthony Marc Huesca.jpg" alt="">Anthony Marc Huesca</td>
+        <td>SBall</td>
         <td>Zamboanga City</td>
         <td>10/03/2024</td>
+        <td>5</td>
         <td>31$</td>
         <td>Completed</td>
-        <td class="actions"><button id="remove"></i><i class='bx bx-trash-alt'></i></button></td>
+        <td class="actions"><button id="remove2"></i><i class='bx bx-trash-alt'></i></button></td>
       </tr>
       <tr>
         <td>4</td>
         <td><img src="../Users/Art Cadiz.jpg" alt="">Art Michael Cadiz</td>
+        <td>SBall</td>
         <td>Zamboanga City</td>
         <td>01//04/2024</td>
+        <td>3</td>
         <td>56$</td>
         <td>Completed</td>
-        <td class="actions"><button id="remove"></i><i class='bx bx-trash-alt'></i></button></td>
+        <td class="actions"><button id="remove3"></i><i class='bx bx-trash-alt'></i></button></td>
       </tr>
       <tr>
         <td>8</td>
         <td><img src="../Users/Dean Reigh Billedo.jpg" alt="">Dean Reigh Billedo</td>
+        <td>SBall</td>
         <td>Zamboanga City</td>
         <td>04/02/2024</td>
+        <td>1</td>
         <td>45$</td>
         <td>Completed</td>
-        <td class="actions"><button id="remove"></i><i class='bx bx-trash-alt'></i></button></td>
+        <td class="actions"><button id="remove4"></i><i class='bx bx-trash-alt'></i></button></td>
       </tr>
       <tr>
         <td>9</td>
         <td><img src="../Users/John Rizzler.jpg" alt="">John Harold Remigio</td>
+        <td>SBall</td>
         <td>Zamboanga City</td>
         <td>06/02/2024</td>
+        <td>2</td>
         <td>11$</td>
         <td>Completed</td>
-        <td class="actions"><button id="remove"></i><i class='bx bx-trash-alt'></i></button></td>
+        <td class="actions"><button id="remove5" ></i><i class='bx bx-trash-alt'></i></button></td>
       </tr>
       </table>
     </div>
@@ -171,9 +183,25 @@
     // delete user //
     var modaldlt = document.getElementById("modaldel");
       var btndlt = document.getElementById("remove");
-        var spandlt = document.getElementsByClassName("cancel")[0];
+       var btndlt2 = document.getElementById("remove2");
+        var btndlt3 = document.getElementById("remove3");
+         var btndlt4 = document.getElementById("remove4");
+          var btndlt5 = document.getElementById("remove5");
+            var spandlt = document.getElementsByClassName("cancel")[0];
 
   btndlt.onclick = function() {
+  modaldlt.style.display = "block";
+  }
+  btndlt2.onclick = function() {
+  modaldlt.style.display = "block";
+  }
+  btndlt3.onclick = function() {
+  modaldlt.style.display = "block";
+  }
+  btndlt4.onclick = function() {
+  modaldlt.style.display = "block";
+  }
+  btndlt5.onclick = function() {
   modaldlt.style.display = "block";
   }
 
